[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://HUDBureau.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUDSystem.tscn" type="PackedScene" id=4]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="HUD" parent="." instance=ExtResource( 2 )]

[node name="HUDBureau" parent="." instance=ExtResource( 3 )]

[node name="EntreMissions" type="Timer" parent="."]
wait_time = 2.0

[node name="HUDSystem" parent="." instance=ExtResource( 4 )]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
[connection signal="mission_finished" from="HUDBureau" to="." method="_on_HUDBureau_mission_finished"]
